# CAD-modeling

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: requirements.txt  streamlit_app.py
assets/demo_vehicle_previews/: README.md
configs/: feasibility_rules.yaml
data/interim/smoke_raw/drivaerml/: force_mom_all.csv  force_mom_constref_all.csv  geo_parameters_all.csv  geo_ref_all.csv
data/processed/: data_manifest.json  design_table.csv  design_table.parquet  smoke_design_table.csv  smoke_design_table.parquet
data/raw/drivaerml/: README.md  download_manifest.jsonl  force_mom_all.csv
data/raw/drivaerml/run_1/: force_mom_1.csv  force_mom_constref_1.csv  geo_parameters_1.csv  geo_ref_1.csv
data/raw/drivaerml/run_100/: force_mom_100.csv  force_mom_constref_100.csv  geo_parameters_100.csv  geo_ref_100.csv
data/raw/drivaerml/run_150/: force_mom_150.csv  geo_parameters_150.csv  (+2 more)
models/: baselines.joblib  feature_schema.json  metrics.json  ood_profile.json  xgboost_cd_model.json  xgboost_cd_model.ubj
notebooks/: 00_dataset_audit.ipynb  03_design_search.ipynb
reports/: feasibility_rules.md  feature_dictionary.md  model_card.md
scripts/: download_drivaerml.sh  export_demo_vehicle_previews.py
src/ai_studio_feasibility_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/copilot/: __init__.py  config.py  data_ingest.py  evaluate.py  explain.py  feasibility.py  features.py  geometry.py  lineage.py  ood.py  search.py  train_xgboost.py  visualization.py
tests/: test_data_ingest.py  test_feasibility.py  test_features.py  test_placeholder.py
(+32 files in other folders)
