[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-studio-feasibility-copilot"
version = "0.1.0"
description = "Portfolio ML/CAD copilot for vehicle shape feasibility exploration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "matplotlib",
    "trimesh",
    "pyglet>=2",
    "pyvista",
    "streamlit",
    "pydantic",
    "joblib",
    "pyarrow",
    "PyYAML",
    "huggingface_hub",
    "shap",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E402", "E501"]
